[package]
name = "aoc2018"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
chrono = "0.4"
failure = "0.1"
slice-deque = "0.3"
log = "0.4"
fern = "0.6"
lazy_static = "1.4"
regex-syntax = "0.6"
petgraph = "0.6"
rand = "0.8"
z3 = "0.11"